# LidarSimulator

./: README.md
cloud_merger/: CMakeLists.txt  package.xml
cloud_merger/config/: merger_params.yaml
cloud_merger/include/cloud_merger/: cloud_merger_node.h
cloud_merger/src/: cloud_merger_main.cpp  cloud_merger_node.cpp
cloud_replayer/: CMakeLists.txt  package.xml
cloud_replayer/config/: replayer_params.yaml
cloud_replayer/include/cloud_replayer/: cloud_replayer_node.h
cloud_replayer/src/: cloud_replayer_main.cpp  cloud_replayer_node.cpp
lidar_simulation/: CMakeLists.txt  package.xml
lidar_simulation/config/: lidar_params.yaml  multi_lidar_simulation.yaml
lidar_simulation/include/: Lidar.h  LidarController.h  LidarModel.h  LidarView.h  MultiLidarSimulatorNode.h  Point3D.h  Position3D.h  Visualization.h
lidar_simulation/include/Objects/: Cylinder.h  Object.h  Plane.h  Sphere.h
lidar_simulation/launch/: lidar_with_trunk_detector.launch.py
lidar_simulation/rviz/: default_config.rviz
lidar_simulation/src/: Lidar.cpp  LidarController.cpp  LidarKeyboardController.cpp  LidarModel.cpp  LidarView.cpp  Main.cpp  MultiLidarSimulatorNode.cpp  Visualization.cpp  lidar_simulation_node.cpp  multi_lidar_node.cpp
lidar_simulation/src/Objects/: Cylinder.cpp  Plane.cpp  Sphere.cpp
lidar_simulation/test/: FunctionalTest.cpp  IntegrationTest.cpp  StressTest.cpp  TestMain.cpp
trunk_detector/: .gitignore  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  package.xml
trunk_detector/config/: logging_level.cfg  trunk_detector_param.yaml
trunk_detector/include/trunk_detector/: trunk_detector.h  trunk_finder.h
trunk_detector/rviz/: default_config.rviz
trunk_detector/src/: trunk_detector.cpp  trunk_detector_node.cpp  trunk_finder.cpp  trunk_finder_node.cpp  trunk_marker_visualizer_node.cpp
trunk_detector_msgs/: .gitattributes  .gitignore  CMakeLists.txt  package.xml
trunk_detector_msgs/msg/: TrunkPose.msg  TrunkPoseArray.msg
