<?xml version="1.0"?>
<package format="3">
  <name>cloud_merger</name>
  <version>0.1.0</version>
  <description>Cloud merger node to fuse multiple point clouds</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
