<?xml version="1.0"?>
<package format="3">
  <name>trunk_detector_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for trunk detector</description>

  <maintainer email="alexey@todo.todo">Alexey</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
